test/compile-fail/resolution/use/renamed/expected.txt
error: unresolved item `d`
  --> top.rhdl:10:10
   |
10 | use a::b::d;
   |           ^ no `d` item in `b`
